--- a/style.css
+++ b/style.css
@@ -3,3 +3,51 @@ body {
   height: 100%;
   margin: 0;
 }
+#head {
+ align-items: center;
+ text-align: center;
+}
+h1 {
+  color: red;
+  text-align: center;
+}
+img {
+  display: justify flex:contents
+  align-items: center;
+}
+nav > a {
+  padding-left: 10px;
+  padding-right: 10px;
+
+  background-color: grey;
+  text-wrap: wrap;
+  border: 0.5cm black;
+  margin: 2%;
+
+}
+nav {
+  text-align: center;
+}
+#featured-property {
+  display: block;
+  width: 50%;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 90%;
+}
+#featured-property p{
+  width: 800px;
+  margin-top: 1.cm;
+  margin-bottom: 1.cm;
+  margin-left: auto;
+  margin-right: auto;
+  font-family: Arial;
+  font-size: 12px;
+}
+#details > div{
+  float:left;
+  background-color: red;
+  text-align: center;
+  width: 25%;
+}
